--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,29 @@
 services:
 ###> doctrine/doctrine-bundle ###
+  # PHP/Symfony Application
+  php:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: symfony_php
+    volumes:
+      # Mount your entire project directory
+      - .:/var/www/html
+      # Override the vendor directory with the one from the image
+      - /var/www/html/vendor
+    ports:
+      - "8080:80"  # Apache runs on port 80
+    environment:
+      # Add your Symfony environment variables here
+      DATABASE_URL: mysql://${MYSQL_USER:-app}:${MYSQL_PASSWORD:-!ChangeMe!}@database:3306/${MYSQL_DATABASE:-app}
+      MESSENGER_TRANSPORT_DSN: amqp://guest:guest@rabbitmq:5672/%2f/messages
+    depends_on:
+      - database
+      - rabbitmq
+    networks:
+      - symfony_network
+
+
   database:
     image: mysql:${MYSQL_VERSION:-8.0}
     environment:
