--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "symfony/yaml": "7.3.*",
         "symfonycasts/tailwind-bundle": "^0.11.1",
         "symfonycasts/verify-email-bundle": "^1.17",
+        "twig/cssinliner-extra": "^3.22",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
