--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/http-client": "7.3.*",
         "symfony/intl": "7.3.*",
         "symfony/mailer": "7.3.*",
+        "symfony/mailtrap-mailer": "7.3.*",
         "symfony/messenger": "7.3.*",
         "symfony/mime": "7.3.*",
         "symfony/monolog-bundle": "^3.10",
