--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       target: frankenphp_prod
+    env_file: ".env.local"
     environment:
       APP_SECRET: ${APP_SECRET}
       MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
