added API_BASE_URL variable to .env. Can add api url in .env.local.

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@
 APP_ENV=dev
 APP_SECRET=ChangeThisToASecretValue
 ###< symfony/framework-bundle ###
-
+API_BASE_URL="!CHANGE_ME!"
 ###> doctrine/doctrine-bundle ###
 # MySQL Configuration
 MYSQL_VERSION=8.0.41
